--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -96,7 +96,14 @@
 		}
 	}
 }
-
+@media (max-width: 380px) {
+	.drawer {
+		padding: 0;
+	}
+	h2 {
+		text-align: center;
+	}
+}
 .overlay {
 	position: absolute;
 	left: 0;
