--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -4,11 +4,9 @@
 	width: 210px;
 	padding: 20px 0 34px;
 	border-radius: 40px;
-	margin: 40px 0 0 0;
+	margin: 0 auto;
+	margin-top: 40px;
 	transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
-	&:not(:nth-child(4n)) {
-		margin-right: 40px;
-	}
 	button {
 		padding: 0;
 		margin: 0;
