--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,9 @@ body {
 
 header {
   border-bottom: 1px solid #eaeaea;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   img {
     margin-right: 16px;
   }
@@ -52,6 +55,11 @@ header {
     }
   }
 }
+@media (max-width: 552px) {
+  .header-right {
+    margin-top: 15px;
+  }
+}
 
 .content {
   margin-top: 40px;
@@ -61,6 +69,7 @@ header {
   }
   .content-top {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 
@@ -94,10 +103,37 @@ header {
     }
   }
 }
+@media (max-width: 380px) {
+  h1 {
+    font-size: 25px;
+  }
+}
 
 .cards {
   display: flex;
   flex-wrap: wrap;
+  .column {
+    flex: 0 1 25%;
+    min-width: 220px;
+  }
+  @media (max-width: 1000px) {
+    .column {
+      flex: 0 1 33.33%;
+      min-width: 220px;
+    }
+  }
+  @media (max-width: 780px) {
+    .column {
+      flex: 0 1 50%;
+      min-width: 220px;
+    }
+  }
+  @media (max-width: 560px) {
+    .column {
+      flex: 0 1 100%;
+      min-width: 220px;
+    }
+  }
 }
 
 .green_button {
@@ -147,6 +183,15 @@ header {
         transform: translateX(-5px) rotate(180deg);
       }
     }
+  }
+}
+
+@media (max-width: 380px) {
+  .empty-cart {
+    width: 300px;
+    margin: auto 0;
+    margin-left: auto;
+    margin-right: 0;
   }
 }
 
